# GroundVitals

./: Online Gantt 20260213.gantt  README.md
Code/Car/esp_car/: CMakeLists.txt
Code/Car/esp_car/main/: CMakeLists.txt  ble_receiver.c  idf_component.yml  main.c
Code/Car/esp_car/main/include/: ble_receiver.h  car_pins.h
Code/Car/esp_car/main/src/: ble_receiver.c
Code/Car/esp_xiao_stream/: CMakeLists.txt
Code/Car/esp_xiao_stream/main/: idf_component.yml  main.c  softap_example_main.c
Code/Car/xiao_blink/: xiao_blink.ino
Code/Car/xiao_stream/: .gitignore  CMakeLists.txt
Code/Car/xiao_stream/main/: .cproject  CMakeLists.txt  idf_component.yml  main.c  softap_example_main.c
Code/Controller/: main.ino  test_BLE.ino
Docs/Controller/: Parts.md  SystemReqs.md
Gantt Charts/: Online Gantt 20260220.gantt  Online Gantt 20260227.gantt  Online Gantt 20260306.gantt  final_timeline.gantt
